--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -42,68 +42,25 @@
 			<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close">
 			</button>
 		</div>
-		<div class="offcanvas-body d-flex flex-column pt-0">
-			<div>
-				<img class="light-mode-item my-3" src="{% static  'images/logo.svg' %}" alt="logo">
-				<img class="dark-mode-item my-3" src="{% static  'images/logo-light.svg' %}" alt="logo">
-				<p>The next-generation blog, news, and magazine theme for you to start sharing your stories today! </p>
-				<!-- Nav START -->
-				<ul class="nav d-block flex-column my-4">
-					<li class="nav-item">
-						<a href="{% url 'blog:home' %}" class="nav-link h5">Home</a>
-					<li class="nav-item">
-						<a class="nav-link h5" href="{% url 'core:about' %}">About</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link h5" href="post-grid.html">Our Journal</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link h5" href="contact-us.html">Contact Us</a>
-					</li>
-				</ul>
-				<!-- Nav END -->
-				<div class="bg-primary-soft p-4 mb-4 text-center w-100 rounded">
-					<span>The Blogzine</span>
-					<h3>Save on Premium Membership</h3>
-					<p>Get the insights report trusted by experts around the globe. Become a Member Today!</p>
-					<a href="#" class="btn btn-warning">View pricing plans</a>
-				</div>
-			</div>
-			<div class="mt-auto pb-3">
-				<!-- Address -->
-				<p class="text-body mb-2 fw-bold">New York, USA (HQ)</p>
-				<address class="mb-0">750 Sing Sing Rd, Horseheads, NY, 14845</address>
-				<p class="mb-2">Call: <a href="#" class="text-body"><u>469-537-2410</u> (Toll-free)</a> </p>
-				<a href="#" class="text-body d-block">hello@blogzine.com</a>
-			</div>
-		</div>
 	</div>
 	<!-- Offcanvas END -->
 	<!-- =======================
 	Header START -->
-	<header class="navbar-light navbar-sticky header-static">
+	<header class="navbar-light navbar-sticky header-static mt-2 mb-md-0">
 		<!-- Logo Nav START -->
 		<div class='col-lg-9 mx-auto'>
 			<nav class="navbar navbar-expand-lg" id='navbarheight'>
 				<div class="container">
 					<!-- Logo START -->
 					<a class="navbar-brand py-0"  href="{% url 'blog:home' %}">
-						<img class="navbar-brand-item light-mode-item" src="{% static  'images/logo.svg' %}" alt="logo">			
-						<img class="navbar-brand-item dark-mode-item" src="{% static  'images/logo-light.svg' %}" alt="logo">			
+						<img class="navbar-brand-item light-mode-item" src="{% static  'images/logo.svg' %}" alt="logo">				
 					</a>
-					<!-- Logo END -->
-
-					<!-- Responsive navbar toggler -->
-					<button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-						<span class="text-body h6 d-none d-sm-inline-block">Menu</span>
-						<span class="navbar-toggler-icon"></span>
-					</button>
-
+					<!-- Logo END --
 					<!-- Main navbar START -->
 					<div class="collapse navbar-collapse" id="navbarCollapse">
 						<ul class="navbar-nav navbar-nav-scroll mx-auto">
 							{% for c in categories %}
-								<li {% if category.slug == c.slug %}class="nav-item" {% endif %}>	
+								<li class="nav-item" {% if category.slug == c.slug %}{% endif %}>	
 									<a class="nav-link" href="{{ c.get_absolute_url }}">{{ c.name|title }}</a>
 								</li>
 							{% endfor %}
@@ -142,9 +99,10 @@
 
 						<!-- Offcanvas menu toggler -->
 						<div class="nav-item">
-							<a class="nav-link p-0" data-bs-toggle="offcanvas" href="#offcanvasMenu" role="button" aria-controls="offcanvasMenu">
-								<i class="bi bi-text-right rtl-flip fs-2" data-bs-target="#offcanvasMenu"> </i>
-							</a>
+							<button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+								<span class="text-body h6 d-none d-sm-inline-block">Menu</span>
+								<i class="bi bi-text-right rtl-flip fs-2" > </i>
+							</button>
 						</div>
 					</div>
 					<!-- Nav right END -->
